--- a/ARIO_tmp-main/browse.html
+++ b/ARIO_tmp-main/browse.html
@@ -1915,7 +1915,7 @@
     import { MTLLoader } from 'MTLLoader';
 
     document.addEventListener("DOMContentLoaded", function () {
-      const models = ["harmmer", "cup", "cola"];
+      const models = ["hammer", "cup", "cola","brush","cup_empty","cup_orange","pot","sprite"];
       const scalesize = ["1", "1", "0.4"];
       const container = document.getElementById("3d-models");
       const interactiveViewer = document.getElementById("interactive-viewer");
