--- a/ARIO_tmp-main/browse.html
+++ b/ARIO_tmp-main/browse.html
@@ -1916,7 +1916,7 @@
 
     document.addEventListener("DOMContentLoaded", function () {
       const models = ["hammer", "cup", "cola","brush","cup_empty","cup_orange","pot","sprite"];
-      const scalesize = ["1", "1", "0.4"];
+      const scalesize = ["1", "1", "0.4","1","1"];
       const container = document.getElementById("3d-models");
       const interactiveViewer = document.getElementById("interactive-viewer");
       const infoBox = document.getElementById("info-box");
